--- a/End_to_End_Heart_Disease_Classification.ipynb
+++ b/End_to_End_Heart_Disease_Classification.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPogxkUafqOY/KRezlj7fJw",
+      "authorship_tag": "ABX9TyN4q3oHdCeytGR9d1TGat0y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,13 +37,45 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## **Preparing the tools**\n",
+        "I am going to use Pandas, Matplotlib and NumPy"
+      ],
+      "metadata": {
+        "id": "-een2f4nFjEf"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "EI040NNl9Nut"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "# Import all the tools I need\n",
+        "\n",
+        "#regular EDA (Exploratory Data Analysis) and plotting libraries\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import seaborn as sns\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "\n",
+        "# Models from Scilit-learn\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "\n",
+        "\n",
+        "# Model Evaluations\n",
+        "from sklearn.model_selection import train_test_split, cross_val_score\n",
+        "from sklearn.model_selection import RandomizedSearchCV, GridSearchCV\n",
+        "from sklearn.metrics import confusion_matrix, classification_report\n",
+        "from sklearn.metrics import precision_score, recall_score, f1_score\n",
+        "from sklearn.metrics import RocCurveDisplay"
+      ]
     }
   ]
 }
